--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadBusinessRatesBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadBusinessRatesBillView.scala.html
@@ -26,7 +26,15 @@ fileUpload: components.FileUpload,
 saveAndContinueButton: saveAndContinueButton
 )
 
-@(form: Form[String], upscanResponse: UpscanInitiateResponse, attributes: Map[String, String], errorMessage: Option[String], address: String, navigationBarContent: NavigationBarContent, searchAgainUrl: String, dashboardUrl: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(form: Form[String],
+upscanResponse: UpscanInitiateResponse,
+attributes: Map[String, String],
+errorMessage: Option[String],
+address: String,
+navigationBarContent: NavigationBarContent,
+searchAgainUrl: String,
+dashboardUrl: String,
+evidence: Option[String])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 @fileUploadFormClass = {
 @if(form.hasErrors){
 "govuk-form-group govuk-form-group--error"
@@ -34,10 +42,16 @@ saveAndContinueButton: saveAndContinueButton
 "govuk-form-group"
 }
 }
-@heading = @{messages("uploadBusinessRatesBill.title")}
-@layout(pageTitle = Some(heading), fullWidth = false, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
+@heading = {
+    @if(evidence.isEmpty){
+        @messages("uploadBusinessRatesBill.title")
+    }else{
+        Upload your @messages(s"uploadEvidence.${evidence.get}")
+    }
+}
+@layout(pageTitle = Some(if(evidence.isEmpty){messages("uploadBusinessRatesBill.title")}else{"Upload your " + messages(s"uploadEvidence.${evidence.get}")}), fullWidth = false, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
 <span class="govuk-caption-m">@address</span>
-<h1 class="govuk-heading-l">@{Text(heading).asHtml}</h1>
+<h1 class="govuk-heading-l">@heading</h1>
     <p class="govuk-caption-m hmrc-caption-m">
         @messages("uploadBusinessRatesBill.p1")
     </p>
