NGR-2143 - Added missing line on successful upload. Work had already been completed on the ticket

--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadedBusinessRateBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadedBusinessRateBillView.scala.html
@@ -51,6 +51,10 @@
 <span class="govuk-caption-m">@addressFull</span>
 <h1 class="govuk-heading-l">@heading</h1>
 
+    <p class="govuk-caption-m hmrc-caption-m">
+    @messages("uploadBusinessRatesBill.p1")
+    </p>
+
 @govukSummaryList(summaryList)
 
 @status match {
