NGR-616 -various fixes

--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/RemoveBusinessRatesBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/RemoveBusinessRatesBillView.scala.html
@@ -52,7 +52,7 @@
             <a href="@uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.RemoveBusinessRatesBillController.remove">
             @saveAndContinueButton(msg = messages("removeBusinessRatesBill.continue"), isStartButton = false, disabled = false)
             </a>
-            @linkComponent(label = messages("removeBusinessRatesBill.cancel"), hrefUrl = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.UploadBusinessRatesBillController.show(None, None).url)
+            @linkComponent(label = messages("removeBusinessRatesBill.cancel"), hrefUrl = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.UploadedBusinessRatesBillController.show.url)
     </div>
         </div>
     </div>
