--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
@@ -17,6 +17,7 @@
 @import uk.gov.hmrc.govukfrontend.views.html.components._
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits._
 @import uk.gov.hmrc.govukfrontend.views.viewmodels.select.SelectItem
+@import uk.gov.hmrc.govukfrontend.views.viewmodels.FormGroup
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.views.html.components._
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.models.components.NavigationBarContent
@@ -67,7 +68,6 @@
     </p>
 }
 
-@selected(v: SelectItem) = @{ if(v.selected) { "selected" } else { "" } }
 @heading = @{messages("singleSearchResultPage.title", postcode)}
 @layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
 @formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.SingleSearchResultController.sort, Symbol("autoComplete") -> "off") {
@@ -78,17 +78,22 @@
             Showing <strong>@pageBottom</strong> to <strong>@pageTop</strong> of <strong>@totalProperties</strong> items.
             <a href= @searchAgainUrl class="govuk-link">@messages("singleSearchResultPage.details.link")</a>
         </p>
-        <div class="govuk-form-group">
-            <label class="govuk-label govuk-!-font-weight-bold" for="sortBy">
-                @messages("singleSearchResultPage.sortBy.label")
-            </label>
-            <select class="govuk-select" id="sortBy" name="sortBy">
-                @for(v <- sortingSelectItems) {
-                    <option value="@v.value" @selected(v)>@v.text</option>
-                }
-            </select>
-            @saveAndContinueButton(msg = messages("singleSearchResultPage.button"), isStartButton = false)
-        </div>
+        @govukSelect(
+            Select(
+                id = "sortBy",
+                name = "sortBy",
+                label = Label(content = Text(messages("singleSearchResultPage.sortBy.label"))),
+                items = sortingSelectItems,
+                formGroup = FormGroup(
+                  afterInput = Some(HtmlContent(
+                    saveAndContinueButton(
+                        msg = messages("singleSearchResultPage.button"),
+                        isStartButton = false
+                    )
+                  ))
+                )
+            ).withFormField(form("sortBy"))
+        )
         @govukTable(propertySearchResultTable)
         @govukPagination(paginationData.toPagination)
     </div>
