NGR-616: remove upload evidence from upscanProgressTracker repo

--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/RemoveBusinessRatesBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/RemoveBusinessRatesBillView.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.ngrpropertylinkingfrontend.models.upscan.{UploadId, UploadStatus}
+@import uk.gov.hmrc.ngrpropertylinkingfrontend.models.upscan.UploadId
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.models.components._
 @import play.api.mvc.RequestHeader
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
