--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadBusinessRatesBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadBusinessRatesBillView.scala.html
@@ -34,7 +34,7 @@ address: String,
 navigationBarContent: NavigationBarContent,
 searchAgainUrl: String,
 dashboardUrl: String,
-evidence: Option[String])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+evidenceType: Option[String])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 @fileUploadFormClass = {
 @if(form.hasErrors){
 "govuk-form-group govuk-form-group--error"
@@ -43,13 +43,13 @@ evidence: Option[String])(implicit request: Request[_], messages: Messages, appC
 }
 }
 @heading = {
-    @if(evidence.isEmpty){
+    @if(evidenceType.isEmpty){
         @messages("uploadBusinessRatesBill.title")
     }else{
-        Upload your @messages(s"uploadEvidence.${evidence.get}")
+        Upload your @messages(s"uploadEvidence.${evidenceType.get}.title")
     }
 }
-@layout(pageTitle = Some(if(evidence.isEmpty){messages("uploadBusinessRatesBill.title")}else{"Upload your " + messages(s"uploadEvidence.${evidence.get}")}), fullWidth = false, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
+@layout(pageTitle = Some(if(evidenceType.isEmpty){messages("uploadBusinessRatesBill.title")}else{"Upload your " + messages(s"uploadEvidence.${evidenceType.get}.title")}), fullWidth = false, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
 <span class="govuk-caption-m">@address</span>
 <h1 class="govuk-heading-l">@heading</h1>
     <p class="govuk-caption-m hmrc-caption-m">
