--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/RemoveBusinessRatesBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/RemoveBusinessRatesBillView.scala.html
@@ -40,7 +40,7 @@
 ) {
 @formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.RemoveBusinessRatesBillController.remove, Symbol("autoComplete") -> "off") {
         <span class="govuk-caption-m">@addressFull</span>
-        <h1 class="govuk-heading-l">@messages("removeBusinessRatesBill.h1")</h1>
+        <h1 class="govuk-heading-l">@heading</h1>
 
         <p class="govuk-body">
         @messages("removeBusinessRatesBill.p1")
