--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadedBusinessRateBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadedBusinessRateBillView.scala.html
@@ -21,15 +21,12 @@
 @import uk.gov.hmrc.hmrcfrontend.views.viewmodels.hmrcstandardpage._
 @import uk.gov.hmrc.govukfrontend.views.html.components._
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.views.html.components._
+@import views.html.helper.CSPNonce
 
 
 @this(layout: Layout, govukSummaryList: GovukSummaryList, saveAndContinueButton: saveAndContinueButton)
 
-@(navigationBarContent: NavigationBarContent, summaryList: SummaryList, addressFull: String, uploadId: UploadId, status: UploadStatus, evidenceType: Option[String])(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
-
-@refreshHeader = {
-    <meta http-equiv="refresh" content="1"/>
-}
+@(navigationBarContent: NavigationBarContent, summaryList: SummaryList, addressFull: String, uploadId: UploadId, status: UploadStatus, evidenceType: Option[String], disableScript: Boolean = false)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @heading = {
     @if(evidenceType.isEmpty){
@@ -44,10 +41,7 @@
     fullWidth = false,
     showBackLink = true,
     navigationBarContent = Some(navigationBarContent),
-    additionalHeadBlock = status match {
-        case UploadStatus.InProgress => Some(refreshHeader)
-        case _                       => None
-    }
+    additionalHeadBlock = None
 ) {
 <span class="govuk-caption-m">@addressFull</span>
 <h1 class="govuk-heading-l">@heading</h1>
@@ -55,7 +49,9 @@
         @messages("uploadBusinessRatesBill.p1")
     </p>
 
+<div role="region" aria-live="polite" aria-atomic="true" role="status" id="uploadStatusTable">
 @govukSummaryList(summaryList)
+</div>
 
 @status match {
 case s: UploadStatus.UploadedSuccessfully => {
@@ -71,4 +67,9 @@ case _ => {
 </p>
         }
     }
+
+@if(!disableScript) {
+<script @CSPNonce.attr  src='@routes.Assets.versioned("upload.js")'></script>
+}
+
 }
