NGR-3280 - Removed all but the main <h1> required for property linking frontend

--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/CurrentRatepayerView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/CurrentRatepayerView.scala.html
@@ -58,7 +58,7 @@
     }
         <span class="govuk-caption-m">@address</span>
         <h1 class="govuk-heading-l">@messages("currentRatepayer.title")</h1>
-        <P class="govuk-body"> @messages("currentRatepayer.p1")</P>
+        <p class="govuk-body"> @messages("currentRatepayer.p1")</p>
         @govukDetails(Details(
         id = Some("how-to-tell-if-you-are-the-current-rate-payer"),
         summary = Text(messages("currentRatepayer.details.summary")),
